# AdataVision

./: .gitignore  Adata3.0.py  Adatavision.py  Adatavision_simple.py  Inventario.csv  LICENSE  README.md  Updates.md  Usuario_password  conftest.py  date.txt  gui_manager.py  info.txt  inter.py  login_gui.py  nuitkaa  pyproject.toml  pytest.ini  requirements-test.txt  requirements_test.py  setup.py  temp.txt  test_adatavision.py  tox.ini
.github/workflows/: python-app.yml
